--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       Coded by <a href="https://josemonge.dev">Jose Monge</a>.
     </p>
   </footer>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
