--- a/index.html
+++ b/index.html
@@ -3,35 +3,48 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <link rel="stylesheet" href="./css/reset.css" />
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Base Apparel coming soon page</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
 </head>
 
 <body>
-  <main>
-    <article>
-      <img src="./images/logo.svg" alt="Brand Logo" />
-      <h1>
-        <span class="heading-highlight">We're</span> coming soon
-      </h1>
-      <p>
-        Hello fellow shoppers! We're currently building our new fashion store.
-        Add your email below to stay up-to-date with announcements and our launch deals.
-      </p>
+  <main class="container">
+    <img class="container__bg" src="./images/bg-pattern-desktop.svg" />
+    <img class="brand container__brand" src="./images/logo.svg" alt="Brand Logo" />
+    <article class="content container__content">
+      <section class="content__card">
+        <h1 class="card__heading">
+          <span class="heading-highlight">We're</span> coming soon
+        </h1>
 
-      <form>
-        <input type="email" name="email" id="email" placeholder="Email Address" />
-      </form>
+        <p class="card__description">
+          Hello fellow shoppers! We're currently building our new fashion store.
+          Add your email below to stay up-to-date with announcements and our launch deals.
+        </p>
+
+        <form class="form card__form">
+          <fieldset class="form__field">
+            <input class="email form__email" type="email" name="email" id="email" placeholder="Email Address"
+              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required />
+            <img class="email__error-icon" src="./images/icon-error.svg" alt="Invalid email!" />
+            <button class="form__button" type="submit">
+              <img src="./images/icon-arrow.svg" alt="Submit email" />
+              <div class="overlay"></div>
+            </button>
+          </fieldset>
+          <span class="form__error ">Please provide a valid email</span>
+        </form>
+      </section>
     </article>
-    <aside>
+    <aside class="container__apparel">
       <picture>
-        <source media="(min-width: 1440px)" srcset="./images/hero-desktop.svg" />
-        <img src="./images/hero-mobile.svg" alt="Woman with Base Apparel clothing brand" />
+        <source media="(min-width: 1440px)" srcset="./images/hero-desktop.jpg" />
+        <img src="./images/hero-mobile.jpg" alt="Woman with Base Apparel clothing brand" />
       </picture>
     </aside>
   </main>
