Added background image on body

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://josemonge.dev">Jose Monge</a>.
+      Background Image by <a
+        href="https://www.freepik.com/free-vector/hand-drawn-tropical-leaves-background_13722333.htm#query=hand%20drawn%20tropical%20leaves%20background&position=36&from_view=search&track=ais">Freepik</a>
     </p>
   </footer>
   <script type="module" src="./src/main.js"></script>
